trabalhando no home.css

--- a/scr/styles/styles.css
+++ b/scr/styles/styles.css
@@ -11,6 +11,10 @@ body {
     background-color: #fff9ea;
 }
 
+section {
+    padding: 28 8%;
+}
+
 .btn-default {
     border: none;
     display: flex;
