--- a/scr/styles/home.css
+++ b/scr/styles/home.css
@@ -11,3 +11,33 @@
     margin-top: 5%;
 
 }
+
+#cta .title {
+    font-size: 4rem;
+    color: #ffffff
+
+}
+
+
+#cta .description {
+    font-family: Arial, Helvetica, sans-serif;
+    color:#ffffff;
+    font-size: 2rem;
+    font-weight: 900;
+}
+
+#cta .description span {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #e9a209;
+    font-size: 2.5rem;
+}
+
+#cta_buttons {
+    display: flex;
+    gap: 24px;
+}
+
+#cta_buttons a {
+    text-decoration: none;
+    color: #ffffff;
+}
