--- a/scr/styles/styles.css
+++ b/scr/styles/styles.css
@@ -8,7 +8,9 @@
 }
 
 body {
-    background-color: #fff9ea;
+    background-color: #2e2d29d4;
+    font-family: 'Sixtfour Convergence', sans-serif;
+    
 }
 
 section {
@@ -20,7 +22,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(35, 35, 28, 0.499);
+    background-color: #e9a209;
     color: #ffffff;
     border-radius: 12px;
     padding: 10px 14px;
@@ -32,7 +34,7 @@ section {
 }
 
 .btn-default:hover{
-    background-color: #f8d477;
+    background-color: #252421c4;
 
 }
 
