--- a/scr/styles/home.css
+++ b/scr/styles/home.css
@@ -1,8 +1,27 @@
 #home {
-    display: flex;
-    min-height: calc(100vh - 91px);
-
+    position: relative;
+    min-width: 30vh;
+    min-height: 100vh; /* Define uma altura mínima para preencher a tela */
+    margin: 0; /* Remove margens externas */
+    padding: 0; /* Remove preenchimentos internos */
 }
+
+
+#home::before {
+    content: "";
+    position: absolute;
+    top: -50px;
+    left: 0;
+    width: 100%;
+    height: 100%; /* Certifique-se de que esteja definido como 100% */
+    background-image: url('../images/1Foto2K.png');
+    background-size: cover;
+    background-position: center;
+    z-index: -1; /* Coloca a imagem atrás do conteúdo */
+    opacity: 0.7; /* Define a opacidade da imagem de fundo */
+    box-shadow: inset 0 0 200px rgba(0, 0, 0, 1); /* Vinheta escura mais forte */
+}
+
 
 
 #cta {
@@ -34,10 +53,11 @@
     font-size: 2.5rem;
 }
 
+/* Ajustes para o layout dos botões */
 #cta_buttons {
     display: flex;
     gap: 8px;
-    padding: 32px 1px;
+    padding: 10px 14px;
     font-weight: 500;
     border-radius: 12px;
 }
@@ -46,7 +66,7 @@
     text-decoration: none;
     color: #ffffff;
     font-weight: 600;
-    padding: 3px 0px;
+    padding: 14px 8px;
     text-align: center;
 }
 
@@ -55,8 +75,16 @@
 #phone_button {
     display: flex;
     gap: 8px;
-    padding: 32px 1px;
+    padding: 14px 8px;
     font-weight: 500;
     border-radius: 12px;
 
 }
+
+/* .shape {
+    background-color: #ffe8b4;
+    width: 50%;
+    height: 100%;
+    position: absolute;
+
+} */
