--- a/scr/styles/about.css
+++ b/scr/styles/about.css
@@ -3,6 +3,58 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
-    
+    min-height: 100vh;  
+}
+
+#pontos {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-top: 32px;
+}
+
+#p1, #p2 {
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    gap: 18px;
+    width: 25%;
+    background-color: #ffffff; /* Fundo da caixa sem opacidade */
+    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.5);
+    position: relative; /* Necessário para posicionar a logo como fundo */
+}
+
+#p1::before, #p2::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url('C:/Users/Sampaio/Desktop/LandingPageQinvest/scr/images/gg.png'); /* Caminho da logo */
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    opacity: 0.3; /* Ajuste da opacidade da logo */
+    z-index: 0; /* Logo fica atrás do conteúdo */
+}
+
+#p1 * , #p2 * {
+    position: relative;
+    z-index: 1; /* Conteúdo da caixa sobre a logo */
+}
+
+
+
+#icon-logo {
+   position: absolute;
+   background-color: #e9a209;
+   display: flex;
+   align-items: center; 
+   justify-content: center;
+   font-size: 1rem;
+   color: #ffff;
+   width: 30px;
+   height: 30px;
 }
