--- a/scr/styles/header.css
+++ b/scr/styles/header.css
@@ -83,5 +83,6 @@ header {
     #mobile_nav_list .nav-item {
         list-style: none;
         text-align: center;
+        cursor: pointer;
     }
 }
