--- a/scr/styles/home.css
+++ b/scr/styles/home.css
@@ -16,21 +16,21 @@
     background-image: url('../images/1Foto2K.png');
     background-size: cover;
     background-position: center;
-    z-index: -1; /* Coloca a imagem atrás do conteúdo */
+    z-index: -1; 
     opacity: 0.7;
-    box-shadow: inset 0 0 200px rgba(0, 0, 0, 1); /* Vinheta escura */
+    box-shadow: inset 0 0 200px rgba(0, 0, 0, 1); 
 }
 
 #cta {
-    width: 100%; /* Ocupa a largura completa para centralizar corretamente */
-    height: 100vh; /* Garante que o conteúdo ocupe a altura total da viewport */
+    width: 100%;
+    height: 100vh;
     display: flex;
-    justify-content: center; /* Centraliza horizontalmente */
-    align-items: center; /* Centraliza verticalmente */
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    text-align: center; /* Centraliza o texto */
+    text-align: center;
     gap: 28px;
-    padding: 0 20px; /* Adiciona padding para evitar que o texto encoste nas laterais */
+    padding: 0 20px; 
 }
 
 #cta .title {
@@ -41,18 +41,18 @@
 
 #cta .description {
     color: #ffffff;
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: 900;
 }
 
 #cta .description span {
     color: #e9a209;
-    font-size: 2.5rem;
+    font-size: 3rem;
 }
 
 #cta_buttons {
     display: flex;
-    gap: 8px;
+    gap: 24px;
     padding: 10px 14px;
     font-weight: 500;
     border-radius: 12px;
@@ -77,11 +77,11 @@
 /* Estilos Responsivos */
 @media screen and (max-width: 1170px) {
     #cta {
-        padding: 0 10px; /* Reduz o padding para telas menores */
+        padding: 0 10px; 
     }
 
     #cta .title {
-        font-size: 3rem; /* Diminui o tamanho do título em telas menores */
+        font-size: 3rem;
     }
 
     #cta .description {
