--- a/scr/styles/about.css
+++ b/scr/styles/about.css
@@ -172,6 +172,19 @@
     #p2 {
         width: 50%;
     }
+
+    .section-title {
+        font-size: 3.2rem;
+        justify-content: center; 
+        text-align: center;
+    
+    }
+
+    .section-subtitle {
+        justify-content: center; 
+        text-align: center; 
+    
+    }
  }
 
  
