--- a/scr/styles/fotos.css
+++ b/scr/styles/fotos.css
@@ -1,61 +1,37 @@
-
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 80px;
-    margin: 80px 0;
+#fotos, .swiper-container {
+    position: relative;
 }
 
-.gallery-item {
-    width: 100%;
-    cursor: pointer;
-    transition: transform 0.2s;
+/* Estilizando os botões do carrossel */
+.swiper-button-next, .swiper-button-prev {
+    color: #fff; /* Cor do ícone da seta */
+    width: 50px;
+    height: 50px;
+    background-color: rgba(0, 0, 0, 0.7); /* Fundo semitransparente para destaque */
+    border-radius: 50%; /* Forma circular */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s, transform 0.3s; /* Animação ao passar o mouse */
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); /* Sombra suave */
 }
 
-.gallery-item:hover {
-    transform: scale(1.05);
+/* Posicionamento dos botões */
+.swiper-button-next {
+    right: 15px; /* Ajuste a distância da borda direita da galeria */
+}
+.swiper-button-prev {
+    left: 15px; /* Ajuste a distância da borda esquerda da galeria */
 }
 
-.modal {
-    display: none; 
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.8);
+/* Efeito ao passar o mouse sobre os botões */
+.swiper-button-next:hover, .swiper-button-prev:hover {
+    background-color: rgba(255, 255, 255, 0.8); /* Altera a cor de fundo ao passar o mouse */
+    color: #333; /* Cor do ícone ao passar o mouse */
+    transform: scale(1.1); /* Aumenta ligeiramente o botão */
 }
 
-.modal-content {
-    margin: auto;
-    display: block;
-    max-width: 80%;
-    max-height: 80%;
-}
-
-.close {
-    position: absolute;
-    top: 10px;
-    right: 25px;
-    color: white;
-    font-size: 35px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-
-#fotos {
-    padding: 40px;
-    text-align: center; 
-    background-color: #3c343471;
-}
-
-.section-title {
-    font-size: 3rem;
-    margin-bottom: 20px;
-    text-transform: uppercase;
-    color: #ffff;
-    font-weight: bold;
+/* Estilizando o ícone de seta para centralizar */
+.swiper-button-next::after, .swiper-button-prev::after {
+    font-size: 1.2em; /* Tamanho do ícone */
 }
