--- a/scr/styles/home.css
+++ b/scr/styles/home.css
@@ -1,7 +1,7 @@
 #home {
     position: relative;
     min-width: 30vh;
-    min-height: 100vh; /* Define uma altura mínima para preencher a tela */
+    min-height: 100vh;
     margin: 0;
     padding: 0;
 }
@@ -9,7 +9,7 @@
 #home::before {
     content: "";
     position: absolute;
-    top: 0; /* Ajustado para garantir que o fundo cubra toda a seção */
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
@@ -74,7 +74,7 @@
     border-radius: 12px;
 }
 
-/* Estilos Responsivos */
+
 @media screen and (max-width: 1170px) {
     #cta {
         padding: 0 10px; 
